[package]
name = "pbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.138"
toml = "0.8.19"
chrono = "0.4.39"
